# adventofcode2023

./: adventofcode2023.opam  dune-project
input/: input.txt
lib/: dune  input.ml  input.mli
lib/day1/: day1.ml  dune
lib/day2/: day2.ml  dune
lib/day3/: day3.ml  day3.mli  dune
test/: dune
