(lang dune 3.12)

(name adventofcode2023)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Raaid Tanveer")

(maintainers "Raaid Tanveer")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name adventofcode2023)
 (synopsis "Advent of Code 2023 Solutions")
 (description "Don't look at my solutions.")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
